# les-essais

./: .gitignore  README.md
Niclaspreter/: build.gradle
Niclaspreter/data/: data1.nic
Niclaspreter/src/main/java/niclaspreter/: LexemTypesMap.java  Main.java  ParseTreeGenerator.java
dotfiles/: .bashrc.mac  .gitconf.custom
effective-modern-c++/: CMakeLists.txt
effective-modern-c++/item-21_prefer_std_make_unique_and_std_make_shared_to_direct_use_of_new/inc/: Item21.h
effective-modern-c++/item-21_prefer_std_make_unique_and_std_make_shared_to_direct_use_of_new/src/: CMakeLists.txt  Item21.cpp
effective-modern-c++/item-31_avoid_default_capture_modes/inc/: Item31.h
effective-modern-c++/item-31_avoid_default_capture_modes/src/: CMakeLists.txt  Item31.cpp
effective-modern-c++/main-project/src/: CMakeLists.txt  Main.cpp
greasemonkey/: github-pr-filelist-expander.user.js
niclaspreter/: .gitignore  settings.gradle
niclaspreter/gradle/wrapper/: gradle-wrapper.properties
niclaspreter/src/main/java/niclaspreter/: Lexem.java  LexemType.java  Lexer.java  Main.java
niclaspreter/src/main/java/niclaspreter/lexer/: Lexem.java  LexemType.java  LexemTypesMap.java  Lexer.java
niclaspreter/src/main/java/niclaspreter/parser/: ParseTreeGenerator.java  Parser.java
parsy/: .gitignore  build.gradle  settings.gradle
parsy/data/: source1.parsy
parsy/gradle/wrapper/: gradle-wrapper.properties
parsy/src/main/antlr/: Parsy.g4
parsy/src/main/java/: Main.java  ParsyBaseVisitorImpl.java
